--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -16,6 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: docker://pandoc/core:2.9
     #- name: Install boost
     #  run: sudo apt-get install libboost-dev
     - name: Set up Python 3.8
