--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
-        $CONDA/bin/conda env update --file environment.yml --name base
+        $CONDA/bin/conda env update --file environment.yml --name base --channel=conda-forge
     #- name: Install pyvacon from pypi test
     #  run: $CONDA/bin/python -m pip install pyvacon 
     - name: Lint with flake8
