--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -26,7 +26,6 @@ jobs:
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         $CONDA/bin/conda env update --file environment.yml --name base
-        $CONDA/bin/conda install pandoc --channel conda-forge
     #- name: Install pyvacon from pypi test
     #  run: $CONDA/bin/python -m pip install pyvacon 
     - name: Lint with flake8
@@ -51,6 +50,9 @@ jobs:
     - name: Install rtd theme for sphinx doc from pypi
       run: $CONDA/bin/python -m pip install sphinx_rtd_theme 
     - name: Build docs with sphinx
+    - uses: r-lib/actions/setup-pandoc@v1
+    with:
+      pandoc-version: '2.9' # The pandoc version to download (if necessary) and use.
       run: $CONDA/bin/sphinx-build -b html docs/source/ docs/build
     - name: Store doc as artifact
       uses: actions/upload-artifact@v1
