--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Install rtd theme for sphinx doc from pypi
       run: $CONDA/bin/python -m pip install sphinx_rtd_theme 
     - name: Build docs with sphinx
-    - uses: r-lib/actions/setup-pandoc@v1
+      uses: r-lib/actions/setup-pandoc@v1
       with:
         pandoc-version: '2.9' # The pandoc version to download (if necessary) and use.
       run: $CONDA/bin/sphinx-build -b html docs/source/ docs/build
