--- a/environment.yml
+++ b/environment.yml
@@ -21,5 +21,6 @@ dependencies:
     - sphinxcontrib-bibtex
     - nbsphinx
     - coverage
+    - sphinx_gallery
     #- --index-url https://test.pypi.org/simple/ pyvacon_depp
     #- jupyter-contrib-nbextensions==0.5.1
