--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ docs/build/*
 notebooks/test_data/*
 rivapy/user_settings.py
 docs/source/notebooks/models/geo_data/*
-*/experiments/*
-*/logs/*
+sandbox/green_ppa/experiments/*
+sandbox/green_ppa/logs/*
