--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ rivapy/user_settings.py
 docs/source/notebooks/models/geo_data/*
 sandbox/green_ppa/experiments/*
 sandbox/green_ppa/logs/*
+.vscode/launch.json
